vpc.tf
# vpc
resource "aws_vpc" "lms--vpc" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"

  tags = {
    Name = "lms"
  }
}
